manifests/planning-poker-client.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: planning-poker

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning-poker-client
  namespace: planning-poker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: planning-poker
  template:
    metadata:
      labels:
        app: planning-poker
    spec:
      containers:
        - image: mstruebing/planning-poker-client:dev
          imagePullPolicy: Always
          name: planning-poker-client

---
apiVersion: v1
kind: Service
metadata:
  name: planning-poker-client
  namespace: planning-poker
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: planning-poker

---
apiVersion: v1
kind: List
items:
  - apiVersion: cert-manager.io/v1
    kind: Issuer
    metadata:
      name: letsencrypt-prod
      namespace: planning-poker
    spec:
      acme:
        email: letsencrypt@maex.me
        privateKeySecretRef:
          name: letsencrypt-prod
        server: https://acme-v02.api.letsencrypt.org/directory
        solvers:
          - http01:
              ingress: {}
            selector: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
  name: planning-poker-client
  namespace: planning-poker
spec:
  rules:
    - host: planning.maex.me
      http:
        paths:
          - backend:
              service:
                name: planning-poker-client
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - planning.maex.me
      secretName: planning-maex-me-tls
